# tiny-utils

./: .gitignore  .py  LICENCE  README.MD  __init__.py  check_port.py  collect_hierarhy.py  csv.py  cursor_spinner.py  date_time.py  file.py  ftp.py  header.py  image.py  jjson.py  pdf.py  printer.py  pyproject.toml  rst_indexer.py  setup.py  smtp.py  version.py  video.py  xls.py
_experiments/: header.py  pprinter.ipynb  test_re_patterns.ipynb
convertor/: __init__.py  base64_to_tmpfile.py  csv2json_csv2dict.py  dict2ns_ns2dict.py  dict2xml.py  header.py  html2esc.py  json2csv_dict2csv.py  text2png.py  version.py  xls2dict.py  xml2dict.py
convertor/_doc/: base64_to_tempfile.md  locales.json
convertor/examples/: xml2dict.xml2dict.py
convertors/: __init__.py  base64.py  base64_to_tmpfile.py  csv.py  dict.py  html.py  html2text.py  json.py  md2dict.py  ns.py  text2png.py  tts.py  version.py  webp2png.py  xls.py  xml2dict.py
docs/: conf.py  index.rst  jjson.md  printer.md  printer.ru.md
docs/_build/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  utils.convertors.html  utils.html  utils.iso.html  utils.string.html
docs/dot/: printer.dot
docs/materials/: pprint_russian_for_publish.md
docs_sphinx/: index.rst
examples/: pprint.ipynb
interface/: __init__.py  ftp.py  header.py  smtp.py  version.py
iso/: __init__.py  version.py
powershell/: image_resizer.ps1  reduce_hypotez_files_access.ps1  reduce_xampp_files_access.ps1
pytest/: .md  __init__.py  test_printer.py  test_printer_guide.md  version.py
src/: __init__.py  version.py
string/: __init__.py  formatter.py  header.py  html_escapes.py  normalizer.py  url.py  url_unparсe.py  validator.py  version.py
tests/: dict2ns_ns2dict.py  test_dict2ns_ns2dict.py  test_jjson.py  test_printer.py  test_video.py  test_xls.py
(+93 files in other folders)
